src/main/java/com/example/webvisit/controller/error/annotation/CorrectIP.java
package com.example.webvisit.controller.error.annotation;

import com.example.webvisit.controller.error.logic.CorrectIPValidator;
import jakarta.validation.Constraint;
import jakarta.validation.Payload;

import java.lang.annotation.ElementType;
import java.lang.annotation.Retention;
import java.lang.annotation.RetentionPolicy;
import java.lang.annotation.Target;

@Target({ElementType.FIELD})
@Retention(RetentionPolicy.RUNTIME)
@Constraint(validatedBy = CorrectIPValidator.class)
public @interface CorrectIP {
    String message() default "Invalid IP address";

    Class<?>[] groups() default {};

    Class<? extends Payload>[] payload() default {};
}
